src/objects/Employment__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>Employer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedClient</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Employments</relationshipLabel>
        <relationshipName>Employments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentPosition__c</fullName>
        <label>CurrentPosition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployerAddress__c</fullName>
        <label>EmployerAddress</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerName__c</fullName>
        <label>EmployerName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerPhone__c</fullName>
        <description>Make a validation to make it a 10 digit number, doesn&apos;t start with 0, does not allow all same digits</description>
        <label>EmployerPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IncomeCategory__c</fullName>
        <label>IncomeCategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
                <value>
                    <fullName>Temporary Leave</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncomeType__c</fullName>
        <label>IncomeType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
                <value>
                    <fullName>Temporary Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncomeValue__c</fullName>
        <label>IncomeValue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Type__c</fullName>
        <label>Income_Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Employment_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Employment Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <description>Can&apos;t be less than 0</description>
        <label>Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PositionTitle__c</fullName>
        <label>Position/Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Employment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To identify if the employment is primary or secondary</description>
        <label>Primary Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedLoan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedLoan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Employments</relationshipLabel>
        <relationshipName>Employments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SelfEmployment__c</fullName>
        <label>SelfEmployment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Employer State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearEmployedinProfession__c</fullName>
        <label>YearEmployedinProfession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years__c</fullName>
        <description>Can&apos;t be  less than zero</description>
        <label>Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Employer Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know whether the record is active or not</description>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Employment</label>
    <listViews>
        <fullName>All_Employment_information</fullName>
        <columns>NAME</columns>
        <columns>Client_id__c</columns>
        <columns>RelatedLoan__c</columns>
        <columns>IncomeType__c</columns>
        <columns>IncomeCategory__c</columns>
        <columns>is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employment information</label>
    </listViews>
    <nameField>
        <displayFormat>EMP-{00000}</displayFormat>
        <label>Employment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>LoanProcessor__c</fullName>
        <label>Loan Processor</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Loan_Officer__c</fullName>
        <label>Loan Officer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Origination_Loan_Officer__c</fullName>
        <label>Origination Loan Officer</label>
    </sharingReasons>
</CustomObject>